--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
-name = "CTApp"
+name = "PWLdynamics"
 uuid = "eb604665-d64b-4d02-aa6d-8b42324a08dc"
-authors = ["Olivier Cots <olivier.cots@toulouse-inp.fr>"]
+authors = ["Agustín G. Yabo <agustin.yabo@inrae.fr>"]
 version = "0.1.0"
 
 [compat]
