--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,11 @@
 name = "PWLdynamics"
-uuid = "eb604665-d64b-4d02-aa6d-8b42324a08dc"
+uuid = "3a975481-f65e-4f93-b353-981d00172cb9"
 authors = ["Agustín G. Yabo <agustin.yabo@inrae.fr>"]
 version = "0.1.0"
 
+[deps]
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+
 [compat]
+Documenter = "1.8.0"
 julia = "1.10"
