--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,5 +1,11 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+NLPModelsIpopt = "f4238b75-b362-5c4c-b852-0801c9a21d71"
+OptimalControl = "5f98b655-cc9a-415a-b60e-744165666948"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [compat]
-Documenter = "1"
+Documenter = "1.6"
+NLPModelsIpopt = "0.10"
+OptimalControl = "0.12"
+Plots = "1.40"
