--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -3,6 +3,7 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 NLPModelsIpopt = "f4238b75-b362-5c4c-b852-0801c9a21d71"
 OptimalControl = "5f98b655-cc9a-415a-b60e-744165666948"
+PWLdynamics = "3a975481-f65e-4f93-b353-981d00172cb9"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [compat]
