--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,3 @@
-# [.github/workflows/CI.yml]
 name: CI
 on:
   push:
@@ -7,9 +6,7 @@ on:
     tags: '*'
   pull_request:
 jobs:
-  test:
-    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
-    runs-on: ${{ matrix.os }}
+  call:
     strategy:
       matrix:
         version:
@@ -19,10 +16,8 @@ jobs:
           - ubuntu-latest
         arch:
           - x64
-    steps:
-      - uses: actions/checkout@v4
-      - uses: julia-actions/setup-julia@latest
-        with:
-          version: ${{ matrix.version }}
-          arch: ${{ matrix.arch }}
-      - uses: julia-actions/julia-runtest@latest
+    uses: control-toolbox/CTActions/.github/workflows/ci.yml@main
+    with:
+      version: ${{ matrix.version }}
+      os: ${{ matrix.os }}
+      arch: ${{ matrix.arch }}
