--- a/docs/src/assets/Project.toml
+++ b/docs/src/assets/Project.toml
@@ -8,6 +8,7 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [compat]
 Documenter = "1.10"
+Literate = "2"
 NLPModelsIpopt = "0.10"
-OptimalControl = "1.0"
+OptimalControl = "1.1"
 Plots = "1.40"
