Change 'runners' to 'runs_on' in CI workflow

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,5 +11,5 @@ jobs:
   call:
     uses: control-toolbox/CTActions/.github/workflows/ci.yml@main
     with:
-      runners: '["ubuntu-latest"]'
+      runs_on: '["ubuntu-latest"]'
       versions: '["1.12"]'
